feat: Implement filter by status route

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = "^0.23.2"
 pydantic = "^2.2.1"
 sqlalchemy = "^2.0.21"
 psycopg2-binary = "^2.9.9"
+pytest-mock = "^3.8.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
